# django-sentry-secure-source-map

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
django_sentry_protect/: __init__.py  middleware.py
src/django_sentry_protect/: __init__.py  middleware.py
src/sentry_secure_source_map/: __init__.py  middleware.py
tests/: settings.py  tests.py  urls.py
