[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-sentry-protect"
description = ""
authors = [{name = "Torchbox", email = "tech@torchbox.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "Django>=3.0,<5.0",
]

[project.optional-dependencies]
test = [
    "pytest-cov==3.0.0",
    "pytest-mock==3.8.2",
    "pytest-django==4.5.2",
    "pytest==7.1.2",
]
lint = [
    "ruff==0.0.261",
    "black==23.3.0",
]

[project.urls]
Home = "https://torchbox.com"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = [
    "tests.py"
]

[tool.ruff]
select = ["E", "F", "I", "W", "N", "B", "A", "C4", "T20", "DJ"]
ignore = ["E501"]
